Closed
Bug 1015368
Opened 11 years ago
Closed 11 years ago
[Camera][Gecko][Flame] crash in mozilla::nsDOMCameraControl::OnUserError(mozilla::CameraControlListener::UserContext, tag_nsresult)
Categories
(Firefox OS Graveyard :: Gaia::Camera, defect)
Tracking
(b2g-v1.4 unaffected, b2g-v2.0 affected)
RESOLVED
FIXED
2.0 S3 (6june)
| Tracking | Status | |
|---|---|---|
| b2g-v1.4 | --- | unaffected |
| b2g-v2.0 | --- | affected |
People
(Reporter: bzumwalt, Assigned: mikeh)
References
Details
(Keywords: crash, Whiteboard: [b2g-crash])
Crash Data
Attachments
(1 file, 2 obsolete files)
|
1.65 KB,
patch
|
aosmond
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-bed323e4-51c4-4e68-a4ea-6551d2140523.
=============================================================
Crash occurred on Flame when switching from rear camera to front camera with HDR enabled. Camera was in video mode.
Unable to reproduce issue after first crash occurred. Steps-wanted to find more solid repro steps.
Environmental Variables:
Device: Flame v2.0 Master M-C
BuildID: 20140523040203
Gaia: b61129780e085636d09406f2a46e922d0f8b9757
Gecko: e9b2b72f4e6c
Version: 32.0a1
Firmware Version: v10G-2
Updated•11 years ago
|
Whiteboard: [b2g-crash]
Comment 1•11 years ago
|
||
With the same build above, I am able to repro this crash bug. However the crash seems very low repro. Most times, the camera will instead become unresponsive and lock up where no user input is registered inside the app. User CAN exit the unresponsive app using home button however.
Crash Repro Rate is 2/10 attempts.
Camera lock up is 6/10.
Repro Steps:
1. Launch the camera app on Flame 2.0.
2. Enable HDR in camera settings.
(The following steps must be done in quick succession.)
3. Tap the screen to bring up the focus reticle.
4. Tap the camera/Video button to switch function.
5. Tap the Front camera button to switch the camera.
Results: Camera app will lock up and occasionally will crash.
Expected Results: Camera will switch function camera/video and also switch camera to front camera.
*Note* if the camera app is closed while in the locked up state, if relaunched the user will get a spinning load icon and ill not recover.
Comment 2•11 years ago
|
||
Tapping the screen to bring up the HDR reticle forces the camera to change it's focus and adjust lighting, then you are changing camera function and switching camera all at the same time.
| Assignee | ||
Updated•11 years ago
|
Summary: crash in mozilla::nsDOMCameraControl::OnUserError(mozilla::CameraControlListener::UserContext, tag_nsresult) → [Camera][Gecko][Flame] crash in mozilla::nsDOMCameraControl::OnUserError(mozilla::CameraControlListener::UserContext, tag_nsresult)
| Assignee | ||
Comment 3•11 years ago
|
||
Can you capture the logcat output while reproducing this problem? It will provide a clue as to what's going on when hitting MOZ_ASSERT_UNREACHABLE(): http://hg.mozilla.org/mozilla-central/annotate/e9b2b72f4e6c/dom/camera/DOMCameraControl.cpp#l1347
Flags: needinfo?(croesch)
Comment 5•11 years ago
|
||
Attached is the log of the Black Screen Lock Up mentioned. (Not the crash)
I will also attach a log of the phone crash when it happens. So far it has not crashed yet. But i wanted to get you started with something to look at.
Jason, I will then test on 1.4 per your request and post those results after I get the needed logs.
Flags: needinfo?(croesch)
| Assignee | ||
Comment 6•11 years ago
|
||
Using the STR in comment 1, I am unable to trigger either a crash or a lock-up.
I'm running:
- gonk: "[ro.build.date]: [Thu May 8 17:10:14 CST 2014]" (not sure which build this is)
- gecko: b2g-inbound:91bef2bad93b
- gaia: master:bc6f07c149770c6e6dfbea941ac65138dc364a15
Comment 7•11 years ago
|
||
Jason, This bug does not happen in Flame 1.4 because there is no reticle when HDR is enabled and the screen is tapped on. This was an essential aspect in my opinion.
As far as crashing, I'm unable to crash the device anymore in 2.0. Even when going back to Fridays 5/23 build which I was able to get a crash rarely.
Instead of getting a crash, I only get the lock up as I've mentioned before. I've tried over 50 times to get the crash and got 0/50 repro. I've provided the log for the lockup in comment 5.
0/50 crash repro
38/50 lockup repro
I'm still working on this bug with the reporter to try and get the crash.
v2.0 Environmental Variables:
Device: Flame v2.0 MOZ
BuildID: 20140527040202
Gaia: 6a391274cd436f8f0d1fad2db8c6b4805703259c
Gecko: cbe4f69c2e9c
Version: 32.0a1
Firmware Version: V10G-2
status-b2g-v1.4:
--- → unaffected
Keywords: qawanted
| Reporter | ||
Comment 8•11 years ago
|
||
Logcat from crash attached. Used todays Flame 2.0 following STR in Comment 1
Environmental Variables:
Device: Flame v2.0 Master M-C Mozilla RIL
BuildID: 20140527040202
Gaia: 6a391274cd436f8f0d1fad2db8c6b4805703259c
Gecko: cbe4f69c2e9c
Version: 32.0a1
Firmware Version: v10G-2
Comment 9•11 years ago
|
||
I hit this crash today without invoking HDR using 2.0. In my case I was playing around with the front facing camera, put the camera in card view and then the crash occurred.
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → mhabicher
| Assignee | ||
Comment 10•11 years ago
|
||
I've hit this issue as well, on switching camera. On inspection, it looks like the OnUserError() switch in DOMCameraControl is missing some entries.
| Assignee | ||
Updated•11 years ago
|
| Assignee | ||
Comment 11•11 years ago
|
||
Attachment #8429439 -
Attachment is obsolete: true
Attachment #8429666 -
Attachment is obsolete: true
Attachment #8430807 -
Flags: review?(aosmond)
Updated•11 years ago
|
Attachment #8430807 -
Flags: review?(aosmond) → review+
| Assignee | ||
Comment 12•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S3 (6june)
You need to log in
before you can comment on or make changes to this bug.
Description
•