Bug 1015368 - add missing cases to OnUserError() switch, r=aosmond